// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useSemanticSearch hook > should cancel previous search 1`] = `
{
  "relationships": [],
  "searchError": "",
  "searchMessage": "",
  "searchResults": [
    {
      "createdAt": "2023-08-03T13:17:26.923537",
      "description": "test2",
      "id": "dataset",
      "modifiedAt": "2023-08-03T13:17:26.923537",
      "score": 0.5,
      "scoreDescriptor": 0.5,
      "scoreExactMatch": 0,
      "scoreTitle": 0.5,
      "tags": [],
      "title": "dataset title",
      "type": "dataset",
      "visualizationUrl": undefined,
      "workspaceId": "test",
    },
    {
      "createdAt": "2023-08-03T13:17:26.923537",
      "description": "test2",
      "id": "attribute",
      "modifiedAt": "2023-08-03T13:17:26.923537",
      "score": 0.5,
      "scoreDescriptor": 0.5,
      "scoreExactMatch": 0,
      "scoreTitle": 0.5,
      "tags": [],
      "title": "attribute title",
      "type": "attribute",
      "visualizationUrl": undefined,
      "workspaceId": "test",
    },
    {
      "createdAt": "2023-08-03T13:17:26.923537",
      "description": "test2",
      "id": "label",
      "modifiedAt": "2023-08-03T13:17:26.923537",
      "score": 0.5,
      "scoreDescriptor": 0.5,
      "scoreExactMatch": 0,
      "scoreTitle": 0.5,
      "tags": [],
      "title": "label title",
      "type": "label",
      "visualizationUrl": undefined,
      "workspaceId": "test",
    },
    {
      "createdAt": "2023-08-03T13:17:26.923537",
      "description": "test2",
      "id": "fact",
      "modifiedAt": "2023-08-03T13:17:26.923537",
      "score": 0.5,
      "scoreDescriptor": 0.5,
      "scoreExactMatch": 0,
      "scoreTitle": 0.5,
      "tags": [],
      "title": "fact title",
      "type": "fact",
      "visualizationUrl": undefined,
      "workspaceId": "test",
    },
    {
      "createdAt": "2023-08-03T13:17:26.923537",
      "description": "test2",
      "id": "date",
      "modifiedAt": "2023-08-03T13:17:26.923537",
      "score": 0.5,
      "scoreDescriptor": 0.5,
      "scoreExactMatch": 0,
      "scoreTitle": 0.5,
      "tags": [],
      "title": "date title",
      "type": "date",
      "visualizationUrl": undefined,
      "workspaceId": "test",
    },
    {
      "createdAt": "2023-08-03T13:17:26.923537",
      "description": "test2",
      "id": "metric",
      "modifiedAt": "2023-08-03T13:17:26.923537",
      "score": 0.5,
      "scoreDescriptor": 0.5,
      "scoreExactMatch": 0,
      "scoreTitle": 0.5,
      "tags": [],
      "title": "metric title",
      "type": "metric",
      "visualizationUrl": undefined,
      "workspaceId": "test",
    },
    {
      "createdAt": "2023-08-03T13:17:26.923537",
      "description": "test2",
      "id": "visualization",
      "modifiedAt": "2023-08-03T13:17:26.923537",
      "score": 0.5,
      "scoreDescriptor": 0.5,
      "scoreExactMatch": 0,
      "scoreTitle": 0.5,
      "tags": [],
      "title": "visualization title",
      "type": "visualization",
      "visualizationUrl": "local:line",
      "workspaceId": "test",
    },
    {
      "createdAt": "2023-08-03T13:17:26.923537",
      "description": "test2",
      "id": "dashboard",
      "modifiedAt": "2023-08-03T13:17:26.923537",
      "score": 0.5,
      "scoreDescriptor": 0.5,
      "scoreExactMatch": 0,
      "scoreTitle": 0.5,
      "tags": [],
      "title": "dashboard title",
      "type": "dashboard",
      "visualizationUrl": undefined,
      "workspaceId": "test",
    },
  ],
  "searchStatus": "success",
}
`;

exports[`useSemanticSearch hook > should return correct results 1`] = `
{
  "relationships": [],
  "searchError": "",
  "searchMessage": "",
  "searchResults": [
    {
      "createdAt": "2023-08-03T13:17:26.923537",
      "description": "test",
      "id": "dataset",
      "modifiedAt": "2023-08-03T13:17:26.923537",
      "score": 0.5,
      "scoreDescriptor": 0.5,
      "scoreExactMatch": 0,
      "scoreTitle": 0.5,
      "tags": [],
      "title": "dataset title",
      "type": "dataset",
      "visualizationUrl": undefined,
      "workspaceId": "test",
    },
    {
      "createdAt": "2023-08-03T13:17:26.923537",
      "description": "test",
      "id": "attribute",
      "modifiedAt": "2023-08-03T13:17:26.923537",
      "score": 0.5,
      "scoreDescriptor": 0.5,
      "scoreExactMatch": 0,
      "scoreTitle": 0.5,
      "tags": [],
      "title": "attribute title",
      "type": "attribute",
      "visualizationUrl": undefined,
      "workspaceId": "test",
    },
    {
      "createdAt": "2023-08-03T13:17:26.923537",
      "description": "test",
      "id": "label",
      "modifiedAt": "2023-08-03T13:17:26.923537",
      "score": 0.5,
      "scoreDescriptor": 0.5,
      "scoreExactMatch": 0,
      "scoreTitle": 0.5,
      "tags": [],
      "title": "label title",
      "type": "label",
      "visualizationUrl": undefined,
      "workspaceId": "test",
    },
    {
      "createdAt": "2023-08-03T13:17:26.923537",
      "description": "test",
      "id": "fact",
      "modifiedAt": "2023-08-03T13:17:26.923537",
      "score": 0.5,
      "scoreDescriptor": 0.5,
      "scoreExactMatch": 0,
      "scoreTitle": 0.5,
      "tags": [],
      "title": "fact title",
      "type": "fact",
      "visualizationUrl": undefined,
      "workspaceId": "test",
    },
    {
      "createdAt": "2023-08-03T13:17:26.923537",
      "description": "test",
      "id": "date",
      "modifiedAt": "2023-08-03T13:17:26.923537",
      "score": 0.5,
      "scoreDescriptor": 0.5,
      "scoreExactMatch": 0,
      "scoreTitle": 0.5,
      "tags": [],
      "title": "date title",
      "type": "date",
      "visualizationUrl": undefined,
      "workspaceId": "test",
    },
    {
      "createdAt": "2023-08-03T13:17:26.923537",
      "description": "test",
      "id": "metric",
      "modifiedAt": "2023-08-03T13:17:26.923537",
      "score": 0.5,
      "scoreDescriptor": 0.5,
      "scoreExactMatch": 0,
      "scoreTitle": 0.5,
      "tags": [],
      "title": "metric title",
      "type": "metric",
      "visualizationUrl": undefined,
      "workspaceId": "test",
    },
    {
      "createdAt": "2023-08-03T13:17:26.923537",
      "description": "test",
      "id": "visualization",
      "modifiedAt": "2023-08-03T13:17:26.923537",
      "score": 0.5,
      "scoreDescriptor": 0.5,
      "scoreExactMatch": 0,
      "scoreTitle": 0.5,
      "tags": [],
      "title": "visualization title",
      "type": "visualization",
      "visualizationUrl": "local:line",
      "workspaceId": "test",
    },
    {
      "createdAt": "2023-08-03T13:17:26.923537",
      "description": "test",
      "id": "dashboard",
      "modifiedAt": "2023-08-03T13:17:26.923537",
      "score": 0.5,
      "scoreDescriptor": 0.5,
      "scoreExactMatch": 0,
      "scoreTitle": 0.5,
      "tags": [],
      "title": "dashboard title",
      "type": "dashboard",
      "visualizationUrl": undefined,
      "workspaceId": "test",
    },
  ],
  "searchStatus": "success",
}
`;
